# cedille-core

./: Main.hs  README.md  Syntax.hs  core.cabal  makefile
Eval/: Erased.hs
Parser/: AST.hs  Parse.y  Token.x  Util.hs
