cabal-version:      3.0
category:           Languages
build-type:         Simple
name:               Cedille-core
synopsis:           Implementation of Cedille-core
version:            0.1.0


Library Core

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    .

  build-depends:
      base
    , array
    , text-short
    , bytestring


  exposed-modules:
      Types
      Eval
      Norm
      Parser.Token
      Parser.Util
--      Parser.Parse


  default-language:
    Haskell2010


test-suite test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/

  build-depends:
      Core
    , base
    , QuickCheck
        ^>= 2.13.2
    , tasty
        ^>= 1.2.3
    , tasty-hunit
        ^>= 0.10
    , tasty-quickcheck
        ^>= 0.10
    , text
        ^>=1.2.3
